gobotany/static/css/styles.css
/* ... */
ul.full-description {
	display: none;
	margin: 0 0 15px 0;
	border: 1px solid #e1e1dc;	
	background: #fbfbf8;	
}
ul.full-description > li {
    clear: left;
	display: block;
	padding: 18px;
	margin: 0 0 0 0;
	border-bottom: 1px solid #e1e1dc;	
	cursor: pointer;
}
ul.full-description > li:last-child {
	border-bottom: none;	
}
ul.full-description > li:hover {
	background-color: #fff;
}
ul.full-description > li h5 {
	background: url(/static/images/icons/plus.png) left 50% no-repeat;
}
ul.full-description > li div {
	display: none;
}
ul.full-description > li h5, ul.full-description > li div {
    padding-left: 28px;
}


#taxon table {
    border-collapse: collapse;
    font-size: 12px;
    margin-top: 8px;
    width: 690px;
}
#taxon th, #taxon td {
    line-height: 105%;
    padding: 6px 4px;
}
#taxon th {
    background: #b4d57f;
    font-weight: normal;
    text-transform: uppercase;
}
#taxon td {
    border: 1px solid #c3d941;
    border-bottom: 0px;
    border-top: 0px;
    text-align: center;
}
#taxon thead th {
    border: 1px solid #c3d941;
    border-right: 1px solid #b4d57f;
    font-size: 10px;
    text-align: center;
    vertical-align: bottom;
}
#taxon thead th:last-child {
    border-right-color: #c3d941;
}
#taxon tbody th, #taxon thead td {
    background: inherit;
    border: 0;
    font-size: 10px;
    font-weight: bold;
    padding-right: 8px;
    text-align: right;
    width: 103px;
}
#taxon tbody th {
    padding-left: 0;
    white-space: nowrap;
}
#taxon tbody th.status {
    font-size: 12px;
    font-weight: normal;
    padding-left: 40px;
    text-align: left;
    text-transform: none;
}

#taxon #sidebar dt, #taxon #sidebar dd {
    display: inline;
}

#taxon #sidebar .lookalikes dt {
    margin-top: 1em;
    display: block;
}

#taxon #sidebar .get-help-btn {
	margin: 0 0 0 10px;	
}
a.enlarge {
	color: #1a2e11;
	display: block;
    margin: 0 0 8px 0;
}
a.enlarge:hover {
	text-decoration: none;
}
a.enlarge img {
    vertical-align: middle;
}
div.section.map p {
    font-size: 9px;
    margin-bottom: 6px;
}
div.section.namap {
    position: relative;
}
div.section.namap div.trans {
    /* Transparent div to make North America map object element clickable */
    cursor: pointer;
    background: transparent;
    height: 133px; /* Cover the map plus the link below it */
    margin-bottom: 0;
    padding: 0;
    position: absolute;
    top: 45px;
    width: 196px;
}

/* Larger gallery styles */

#taxon .img-gallery {
	width: 710px;
	float: none;
	margin: 0 0 0 0;	
}
#taxon .img-gallery .img-container {
	width: 710px;
	height: 273px;
}
#taxon .img-gallery .frame {
	width: 700px;
	height: 239px;	
}
#taxon .img-gallery .images .single-img {
	position: relative;
	float: left;	
}
#taxon .img-gallery .images img {
	float: none;	
}
#taxon #main .img-gallery p.caption {
	position: absolute;
	right: 0;
	bottom: -22px;
	margin: 0 0 0 0;
}
#taxon .controls {
	position: relative;
}
#taxon .controls span {
	position: relative;
	top: -22px;	
}
#taxon a.more {
    cursor: pointer;
}

/* Smooth Div Scroll image area */
#taxon #species-images {
    height: 239px;
    margin: 0 0 20px 0;
    position: relative;
    width: 700px;
}
#taxon #species-images div.scrollableArea img {
    border-right: 5px solid #fff;
    float: left;
    margin: 0;
    padding: 0;
    position: relative;
}

/* Shadowbox tweaks to allow multiple title lines, for presenting a
 * photo title, photographer credit, and copyright. */
#taxon #sb-title, #taxon #sb-title-inner,
#plant-id #sb-title, #plant-id #sb-title-inner,
#plant-id-2 #sb-title, #plant-id-2 #sb-title-inner,
#family #sb-title, #family #sb-title-inner,
#genus #sb-title, #genus #sb-title-inner {
    height: 76px;
    line-height: 70%;
    position: relative;
}
#taxon #sb-title-inner div, #plant-id #sb-title-inner div,
#plant-id-2 #sb-title-inner div, #family #sb-title-inner div,
#genus #sb-title-inner div {
    bottom: 6px;
    position: absolute;
}
#taxon #sb-title-inner h6, #plant-id #sb-title-inner h6,
#plant-id-2 #sb-title-inner h6, #family #sb-title-inner h6,
#genus #sb-title-inner h6 {
    font-size: 16px;
    line-height: 110%;
    margin: 0 0 2px;
    padding: 0;
}
#taxon #sb-title-inner span, #plant-id #sb-title-inner span,
#plant-id-2 #sb-title-inner span, #family #sb-title-inner span,
#genus #sb-title-inner span {
    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
    font-size: 10px;
}
#taxon #sb-nav-close, #plant-id #sb-nav-close, #plant-id-2 #sb-nav-close,
#family #sb-nav-close, #genus #sb-nav-close {
    top: 56px !important;
}
#taxon #sb-title-inner a, #plant-id #sb-title-inner a,
#plant-id-2 #sb-title-inner a, #family #sb-title-inner a,
#genus #sb-title-inner a {
    color: #fff;
    text-decoration: underline;
}
#sb-counter {
    font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
}

/* Help section: sidebar, heading, list styles */

#getting-started #sidebar, #about #sidebar {
    height: 1046px;
}
#advanced-map #sidebar {
    height: 746px;
}
#glossary #sidebar, #video-help-topics #sidebar {
    height: 1420px;
}
#getting-started #sidebar a:hover, #about #sidebar a:hover,
#advanced-map #sidebar a:hover, #glossary #sidebar a:hover, 
#video-help-topics #sidebar a:hover {
    text-decoration: none;
}

#getting-started h2, #about h2, #advanced-map h2, #glossary h2,
#plantshare h2, #teaching-tools h2, #video-help-topics h2 {
    margin-bottom: 8px;
}
#getting-started h3, #about h3, #advanced-map h3, #glossary h3,
#teaching-tools h3, #video-help-topics h3 {
    margin: 8px 0;
}

#getting-started #main ul, #about #main ul {
    list-style-type: disc;
    line-height: 170%;
}

/* Getting Started page styles */

#getting-started .question {
	padding: 18px 0 18px 45px;	
	border-bottom: 1px solid #e2dfcb;
}
#getting-started .first.question {
	margin: 11px 0 0 0;
	border-top: 1px solid #e2dfcb;
	background: url(/static/images/icons/1.png) left 18px no-repeat;	
}
/* ... */

